Correcciones finales de los profesores

--- a/Formato Memoria/Capitulo4/4.4_Errores.tex
+++ b/Formato Memoria/Capitulo4/4.4_Errores.tex
@@ -33,7 +33,7 @@ Por último, el detalle exhaustivo de errores que se considera prevenir con el s
 
     PBLM-3 & Asignar un gasto a un participante que no esté en la solicitud. \\ \hline
 
-    PBLM-4 & Documentación realizada fuera del periodo en que ocurre el evento.. \\ \hline
+    PBLM-4 & Documentación realizada fuera del periodo en que ocurre el evento. \\ \hline
 
     PBLM-5 & Falta de chequeo de los documentos que se deben adjuntar en la Rendición/Solicitud de reembolso. \\ \hline
 
