--- a/Formato Memoria/memoria.tex
+++ b/Formato Memoria/memoria.tex
@@ -210,6 +210,7 @@ Dedicado a ...
 	\subfile{Capitulo4/4.3_CaracteristicasGenerales}
 
 	\section{Errores frecuentes de la Gestión Manual de Fondos}
+	\label{sec:Errores_Frecuentes}
 	\subfile{Capitulo4/4.4_Errores}
 
 	\section{Planificación de las iteraciones}
@@ -251,6 +252,9 @@ Dedicado a ...
 
 	\section{Aplicación Obtenida}
 	\subfile{Capitulo6/6.2_Aplicacion_Obtenida}
+
+	%\section{Corrección de errores frecuentes}
+	%\subfile{Capitulo6/6.3_Correccion_de_errores}
 
 	\section{Pruebas}
 	\subfile{Capitulo6/6.3_Pruebas}
